Amélioration exercice sur le gini

--- a/Statistique descriptive/TP 1/TP1.ipynb
+++ b/Statistique descriptive/TP 1/TP1.ipynb
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 1** : créez une copie de la table RP12_d35 dans la bibliothèque *resultat*."
+    "**Question 2** : créez une copie de la table RP12_d35 dans la bibliothèque *resultat*."
    ]
   },
   {
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 2** : En utilisant une procédure, affichez les vingts premières lignes de la table."
+    "**Question 3** : En utilisant une procédure, affichez les vingts premières lignes de la table."
    ]
   },
   {
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 2** : À l'aide d'une procédure judicieusement choisie, affichez des informations générales sur la table RP12 ainsi que sur les variables. Combien de variables et d'observations contient cette table ? Combien de variables numériques sont disponibles dans cette table ?"
+    "**Question 4** : À l'aide d'une procédure judicieusement choisie, affichez des informations générales sur la table RP12 ainsi que sur les variables. Combien de variables et d'observations contient cette table ? Combien de variables numériques sont disponibles dans cette table ?"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 3** : Quel est l'âge médian en Ille-et-Vilaine ? Celui des femmes et celui des hommes ? Veillez à ne pas afficher le nombre d'observations par sexe dans vos sorties."
+    "**Question 5** : Quel est l'âge médian en Ille-et-Vilaine ? Celui des femmes et celui des hommes ? Veillez à ne pas afficher le nombre d'observations par sexe dans vos sorties."
    ]
   },
   {
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 4** : Calculez les déciles d'âge par sexe ainsi que le rapport interdécile. Stockez-les dans une table SAS"
+    "**Question 6** : Calculez les déciles d'âge par sexe ainsi que le rapport interdécile. Stockez-les dans une table SAS"
    ]
   },
   {
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 5** : Calculez à l'aide d'une procédure des indicateurs statistiques (moyenne, médiane, minimum, maximum, mode) sur l'âge en Ille-et-Vilaine et stockez-les dans une seule table."
+    "**Question 7** : Calculez à l'aide d'une procédure des indicateurs statistiques (moyenne, médiane, minimum, maximum, mode) sur l'âge en Ille-et-Vilaine et stockez-les dans une seule table."
    ]
   },
   {
@@ -203,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 6** : Faites deux représentations graphiques de la distribution de l'âge (histogramme et boîte à moustache) et repérez à vue de nez sur le graphique les indicateurs de tendance centrale. On pourra utiliser la procédure SGPLOT.\n",
+    "**Question 8** : Faites deux représentations graphiques de la distribution de l'âge (histogramme et boîte à moustache) et repérez à vue de nez sur le graphique les indicateurs de tendance centrale. On pourra utiliser la procédure SGPLOT.\n",
     "\n",
     "Remarque : il est possible d'obtenir un histogramme avec la procédure UNIVARIATE à l'aide de l'instruction HISTOGRAM mais les poids ne seront pas pris en compte."
    ]
@@ -246,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question** : En utilisant une seule procédure SGPLOT, comparez à l'aide d'une boîte à moustache l'âge des femmes et l'âge des hommes."
+    "**Question 9** : En utilisant une seule procédure SGPLOT, comparez à l'aide d'une boîte à moustache l'âge des femmes et l'âge des hommes."
    ]
   },
   {
@@ -265,7 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 7** : On aimerait vérifier de manière graphique si l'âge est distribuée selon une loi gaussienne. Proposez un graphique permettant cette comparaison et réalisez-le."
+    "**Question 10** : On aimerait vérifier de manière graphique si l'âge est distribuée selon une loi gaussienne. Proposez un graphique permettant cette comparaison et réalisez-le."
    ]
   },
   {
@@ -283,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 8** : À l'aide d'une étape DATA, ajoutez la variable AGETRANCHE qui va valoir : \n",
+    "**Question 11** : À l'aide d'une étape DATA, ajoutez la variable AGETRANCHE qui va valoir : \n",
     "* \"[0;18[\" quand l'âge est entre 0 et 18 ans exclus\n",
     "* \"[18;26[\" quand l'âge est entre 18 et 26 ans\n",
     "* \"[26;55[\" quand l'âge est entre 26 et 55 ans\n",
@@ -303,7 +303,8 @@
     "SELECT;\n",
     "    WHEN (AGE >= 0 AND AGE < 18) AGETRANCHE = \"[0;18]\";\n",
     "    WHEN (AGE <= 18 AND AGE < 26) AGETRANCHE = \"[18;26[\";\n",
-    "    WHEN (AGE <= 26 AND AGE < 55) AGETRANCHE = \"[26;55[\";\n",
+    "    WHEN (AGE <= 26 AND AGE < 40) AGETRANCHE = \"[26;40[\";\n",
+    "    WHEN (AGE <= 40 AND AGE < 55) AGETRANCHE = \"[40;55[\";\n",
     "    WHEN (AGE <= 55 AND AGE < 65) AGETRANCHE = \"[55;65[\";\n",
     "    WHEN (AGE <= 65 AND AGE < 80) AGETRANCHE = \"[65;80[\";\n",
     "    OTHERWISE AGETRANCHE = \"[80;+[\";\n",
@@ -325,7 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 8** : Calculez pour chaque observation l'écart de l'âge pondéré à la moyenne arithmétique pondéré de la variable AGE. Vous stockerez ces valeurs dans une variable nommée ECM dans la table resultat.RP12_d35. Combien vaut le total de cette variable ? Vérifiez en calculant les effectifs cumulés en utilisant une étape DATA et l'instruction RETAIN."
+    "**Question 12** : Calculez pour chaque observation l'écart de l'âge pondéré à la moyenne arithmétique pondéré de la variable AGE. Vous stockerez ces valeurs dans une variable nommée ECM dans la table resultat.RP12_d35. Combien vaut le total de cette variable ? Vérifiez en calculant les effectifs cumulés en utilisant une étape DATA et l'instruction RETAIN."
    ]
   },
   {
@@ -361,13 +362,93 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question** : On se propose de calculer par la méthode des trapèzes l'indice de Gini en utilisant la méthode des trapèzes. \n",
-    "* Calculer la table effectif par tranche d'âge (AGE_TRANCHE)\n",
-    "* Créer une variable numérique CENTRE_CLASSE qui va donner le centre de la classe (moyenne de la borne inférieure et de la borne supérieure) de chaque observation. On pourra utiliser une deuxième étape DATA.\n",
-    "* \n"
+    "**Question 13** : On se propose de calculer par la méthode des trapèzes l'indice de Gini en utilisant la méthode des trapèzes puis faire la courbe de Lorentz de la variable AGETRANCHE. \n",
+    "* Créer la table EFF_TRANCHE à l'aide d'une procédure FREQ. Cette table contiendra le nombre d'individus par tranche d'âge  (AGETRANCHE). Prenez bien en compte la pondération. On ne gardera que les variables AGETRANCHE et PERCENT. \n",
+    "* Renommez dans la table EFF_TRANCHE la variable PERCENT en PCT_EFFECTIF.\n",
+    "* Créez la table AGE_TOT_TRANCHE à l'aide d'une procédure TABULATE. Cette table contiendra la somme des âges pondérés des individus par tranche d'âge. On ne gardera que les variables AGETRANCHE et PctN_0. \n",
+    "* Renommez dans la table AGE_TOT_TRANCHE la variable PctN_0 en PCT_AGE.\n",
+    "* Fusionnez ces deux tables. La table fusionnée se nommera DONNEES_GINI.\n",
+    "* Créez dans la table DONNEES_GINI.\n",
+    "* Créez les variables PCT_EFFECTIF_CUM et PCT_AGE_CUM qui seront respectivement les sommes cumulées des variables PCT_EFFECTIF et PCT_AGE.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC FREQ DATA = resultat.rp12_d35;\n",
+    "TABLE agetranche / OUT = eff_tranche;\n",
+    "WEIGHT ipondi;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC TABULATE DATA = resultat.RP12_d35 out = AGE_TOT_TRANCHE;\n",
+    "TABLES agetranche,age(COLPCTN = \"%\");\n",
+    "VAR AGE;\n",
+    "CLASS agetranche;\n",
+    "WEIGHT ipondi;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proc print data = age_tot_tranche;\n",
+    "run;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA donnees_gini;\n",
+    "MERGE eff_tranche age_tot_tranche;\n",
+    "BY agetranche;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proc print data = donnees_GINI(obs = 20);\n",
+    "run;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proc print data = eff_tranche;\n",
+    "run;"
    ]
   }
  ],
