Ajout de la partie de présentation des formats

--- a/Statistique descriptive/TP 2/TP2.ipynb
+++ b/Statistique descriptive/TP 2/TP2.ipynb
@@ -11,6 +11,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Les formats\n",
+    "\n",
+    "Un format est un *masque d'affichage des données*. Cet objet permet en SAS de faciliter la lecture des tables. \n",
+    "\n",
+    "Il existe deux types de format : les formats (aussi appelés les formats de lecture) et les informats (ou format d'écriture).\n",
+    "\n",
+    "L'exemple typique d'utilisation de format est celui des formats de date. Par défaut, SAS stocke les dates sous la forme d'un entier qui correspond au nombre de jours entre la date et le 1er janvier 1960. Il s'agit donc d'une variable numérique. Il est très délicat pour un utilisateur de manipuler ces variables sous cette forme (à quoi correspond par exemple la date -4017?). Les formats de date permettent de changer l'affichage de la variable : on peut par exemple choisir d'afficher la date sous la forme Jour/Mois/Année à l'aide du format DDMMYY. ou sous la forme MoisAnnée à l'aide du format MONYY.\n",
+    "\n",
+    "Les formats ne s'appliquent pas uniquement sur les dates mais sur n'importe quelle variable. On peut par exemple vouloir afficher des numéros de départements sur trois positions en complétant par des zéros à gauche (001, 002 ...) ou afficher un nombre restreint de décimales.\n",
+    "\n",
+    "Une liste des formats est disponible ici.\n",
+    "\n",
+    "Pour appliquer un format à une variable, on utilisera l'instruction FORMAT dans une procédure ou dans une étape DATA.\n",
+    "\n",
+    "Par exemple, prenons la table AIR de la bibliothèque SASHELP."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il est possible de créer "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercice 1 : Analyse univariée"
    ]
   },
@@ -58,13 +86,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "PROC PRINT DATA = source.pauv12dep(obs = 20);\n",
-    "RUN;"
+    "## Exercice 2 : Analyse de l'âge et de la catégorie socioprofessionnelle des habitants d'Ille-et-Vilaine"
    ]
   }
  ],
