--- a/Statistique descriptive/TP 2/TP2.ipynb
+++ b/Statistique descriptive/TP 2/TP2.ipynb
@@ -89,7 +89,11 @@
     "* Si $\\text{AGE} \\in [65;80[\" \\longrightarrow$ \"Jeunes seniors\"\n",
     "* Si $\\text{AGE} \\in [80;+\\infty[\" \\longrightarrow$ \"Seniors\"\n",
     "\n",
-    "Où est stocké le format NOMTRANCHE ?"
+    "Créez dans la même procédure un format NOMSEXE qui sera appliqué à la variable SEXE tel qu'on associe :\n",
+    "* Si SEXE = \"1\" $\\longrightarrow$ \"Homme\"\n",
+    "* Si SEXE = \"2\" $\\longrightarrow$ \"Femme\"\n",
+    "\n",
+    "Où est stocké le format NOMTRANCHE si l'option de procédure LIBRARY n'est pas renseigné ?"
    ]
   },
   {
@@ -107,6 +111,9 @@
     "        55 - 64 = \"Actifs expérimentés\"\n",
     "        65 - 79 = \"Jeunes seniors\"\n",
     "        80 - HIGH = \"Seniors\";\n",
+    "    VALUE $NOMSEXE\n",
+    "        \"1\" = \"Homme\"\n",
+    "        \"2\" = \"Femme\";\n",
     "RUN;"
    ]
   },
@@ -206,7 +213,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 7** : Affichez le tableau des fréquences conditionnelles par ligne (aussi appelé tableau des profils-lignes) du tableau de contingence précédent.\n",
+    "**Question 7**  : Stockez la table précédente dans la bibliothèque *resultat*. On nommera la table *table_contingence*. On pourra utiliser une option de procédure adaptée.\n",
+    "\n",
+    "À l'aide d'une procédure PRINT, affichez le résultat obtenu. Le résultat correspond à la table affichée à la question précédente ?\n",
+    "\n",
+    "**Question bonus (à faire si vous avez traité l'intégralité du sujet)** : En utilisant la procédure TRANSPOSE, créez une table *vraie_table_contingence* dans la bibliothèque *resultat* qui contiendra la table de contingence telle qu'elle est affichée dans l'ODS HTML."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC FREQ DATA = resultat.RP12_d35;\n",
+    "TABLE AGE * TACT / OUT = resultat.table_contingence;\n",
+    "FORMAT AGE NOMTRANCHE.\n",
+    "    TACT $NOMTACT.;\n",
+    "WEIGHT IPONDI;\n",
+    "RUN;\n",
+    "\n",
+    "PROC TRANSPOSE DATA = resultat.table_contingence OUT = resultat.vraie_table_contingence(drop= _name_ _label_);\n",
+    "BY AGE;\n",
+    "VAR COUNT;\n",
+    "ID TACT;\n",
+    "RUN;\n",
+    "\n",
+    "PROC PRINT DATA = resultat.vraie_table_contingence;\n",
+    "run;\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 8** : Affichez le tableau des fréquences conditionnelles par ligne (aussi appelé tableau des profils-lignes) du tableau de contingence précédent.\n",
     "\n",
     "Quelles sont les types d'activités sur-représentés chez les étudiants ? Quid chez les seniors ?"
    ]
@@ -229,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 8** : Rappelez la définition de la statistique du Khi-Deux. Dans le cas du tableau de contingence de la question 6, dans quel intervalle est comprise la statistique du Khi-Deux ?\n",
+    "**Question 9** : Rappelez la définition de la statistique du Khi-Deux. Dans le cas du tableau de contingence de la question 6, dans quel intervalle est comprise la statistique du Khi-Deux ?\n",
     "\n",
     "Discutez du cas où la statistique est nulle. \n",
     "\n",
@@ -267,6 +308,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Question 10** : À l'aide d'une procédure TABULATE (on pourra utiliser les explications sur la procédure TABULATE en préambule du [TP1](https://foad-moodle.ensai.fr/mod/resource/view.php?id=1052)), réalisez le tableau suivant :\n",
+    "\n",
+    "Pour rappel, on peut obtenir les effectifs pondérés d'un ensemble d'individus en faisant la somme des poids des individus enquêtés dans le groupe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC TABULATE DATA = resultat.RP12_d35;\n",
+    "TABLES (AGE ALL) * SEXE , TACT*IPONDI*(SUM =\"Effectif pondéré\");\n",
+    "FORMAT AGE NOMTRANCHE.\n",
+    "TACT $NOMTACT.\n",
+    "SEXE $NOMSEXE.;\n",
+    "VAR IPONDI;\n",
+    "CLASS AGE SEXE TACT;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 11** : Modifiez le code précédent de manière à afficher les profils-lignes (on pourra utiliser l'option ROWPCTSUM). Stockez cette table sous la forme d'une table SAS dans la bibliothèque *resultat*. Cette table se nommera *table_crois1*. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC TABULATE DATA = resultat.RP12_d35 OUT = resultat.table_crois1;\n",
+    "TABLES (AGE ALL) * SEXE , TACT*IPONDI*(ROWPCTSUM =\"Effectif pondéré\");\n",
+    "FORMAT AGE NOMTRANCHE.\n",
+    "TACT $NOMTACT.\n",
+    "SEXE $NOMSEXE.;\n",
+    "VAR IPONDI;\n",
+    "CLASS AGE SEXE TACT;\n",
+    "RUN;\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercice 2 : Application de formats externes à la base Pisa"
    ]
   },
@@ -274,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercice 3 : Analyse de données issues de l'enquête Formation, qualification et profession."
+    "## Exercice 3 : Etude de la mobilité sociale intergénérationnelle"
    ]
   }
  ],
