--- a/Statistique descriptive/TP 2/TP2.ipynb
+++ b/Statistique descriptive/TP 2/TP2.ipynb
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PROC FORMAT;\n",
+    "PROC FORMAT LIBRARY = WORK;\n",
     "    VALUE NOMTRANCHE\n",
     "        LOW - 17 = \"Enfants\"\n",
     "        18 - 25 = \"Etudiants\"\n",
@@ -130,10 +130,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "OPTIONS FMTSEARCH=(work);\n",
-    "\n",
     "DATA resultat.rp12_d35;\n",
-    "SET resultat.rp12_d35;\n",
+    "SET source.rp12_d35;\n",
     "FORMAT AGE NOMTRANCHE.;\n",
     "RUN;"
    ]
@@ -215,9 +213,7 @@
    "source": [
     "**Question 7**  : Stockez la table précédente dans la bibliothèque *resultat*. On nommera la table *table_contingence*. On pourra utiliser une option de procédure adaptée.\n",
     "\n",
-    "À l'aide d'une procédure PRINT, affichez le résultat obtenu. Le résultat correspond à la table affichée à la question précédente ?\n",
-    "\n",
-    "**Question bonus (à faire si vous avez traité l'intégralité du sujet)** : En utilisant la procédure TRANSPOSE, créez une table *vraie_table_contingence* dans la bibliothèque *resultat* qui contiendra la table de contingence telle qu'elle est affichée dans l'ODS HTML."
+    "À l'aide d'une procédure PRINT, affichez le résultat obtenu. Le résultat correspond à la table affichée à la question précédente ?"
    ]
   },
   {
@@ -233,6 +229,23 @@
     "WEIGHT IPONDI;\n",
     "RUN;\n",
     "\n",
+    "PROC PRINT DATA = resultat.table_contingence(obs = 20);\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 8** : En utilisant la procédure TRANSPOSE, créez une table *vraie_table_contingence* dans la bibliothèque *resultat* qui contiendra la table de contingence telle qu'elle est affichée dans l'ODS HTML."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "PROC TRANSPOSE DATA = resultat.table_contingence OUT = resultat.vraie_table_contingence(drop= _name_ _label_);\n",
     "BY AGE;\n",
     "VAR COUNT;\n",
@@ -240,7 +253,7 @@
     "RUN;\n",
     "\n",
     "PROC PRINT DATA = resultat.vraie_table_contingence;\n",
-    "run;\n"
+    "RUN;"
    ]
   },
   {
@@ -270,6 +283,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Chez les étudiants : Actifs ayant un emploi, Chômeurs, Elèves\n",
+    "Chez les seniors : Retraités, Femmes ou hommes au foyer\n",
+    "\n",
+    "Ne pas hésitez à dire aux étudiants de bien comparer la valeur observé dans une case avec la fréquence dans la population globale. Par exemple, pour les étudiants, 44,17% sont actifs ayant un emploi contre 43.20% dans la population totale. On a bien une sur-représentation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Question 9** : Rappelez la définition de la statistique du Khi-Deux. Dans le cas du tableau de contingence de la question 6, dans quel intervalle est comprise la statistique du Khi-Deux ?\n",
     "\n",
     "Discutez du cas où la statistique est nulle. \n",
@@ -284,6 +307,8 @@
     "**Réponse :**\n",
     "\n",
     "La statistique du Khi-Deux est donnée ici par $\\displaystyle \\chi^2 = \\sum_{i = 1}^7 \\sum_{j = 1}^7 \\frac{(n_{ij} - \\frac{n_{i\\bullet}n_{\\bullet j}}{n})^2}{\\frac{n_{i\\bullet}n_{\\bullet j}}{n}}$ où $n_{ij}$ désigne l'entrée (i,j) du tableau de contingence.\n",
+    "\n",
+    "N'hésitez pas à montrer qu'il s'agit en un certain sens d'une distance entre effectif théorique (dans le cas où les deux variables sont indépendantes) et effectif observé.\n",
     "\n",
     "$\\chi^2 \\in [0; 6 = min(I-1, J-1)]$ (I et J désignant le nombre de modalités de chaque variable).\n",
     "\n",
@@ -310,6 +335,13 @@
    "source": [
     "**Question 10** : À l'aide d'une procédure TABULATE (on pourra utiliser les explications sur la procédure TABULATE en préambule du [TP1](https://foad-moodle.ensai.fr/mod/resource/view.php?id=1052)), réalisez le tableau suivant :\n",
     "\n",
+    "![Tableau](https://i.ibb.co/qkS6QGM/tableau-q10.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Pour rappel, on peut obtenir les effectifs pondérés d'un ensemble d'individus en faisant la somme des poids des individus enquêtés dans le groupe."
    ]
   },
@@ -356,14 +388,166 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercice 2 : Application de formats externes à la base Pisa"
+    "## Exercice 2 : Etude de la mobilité sociale intergénérationnelle"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercice 3 : Etude de la mobilité sociale intergénérationnelle"
+    "Dans cet exercice, on va considérer la table *fdp*. Cette table contient pour chaque individu (individu) sa catégorie socioprofessionelle (CSFils) et celle de son père (CSPere). On retrouve également une variable identificatrice (id)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 1** : Combien de variables non numérique contient cette table ? Combien d'observations ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC CONTENTS DATA = source.fqp;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 2** : À l'aide d'une procédure FREQ, affichez le nombre de modalités des variables CSFils et CSPere."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC FREQ DATA = source.fqp(keep = CSFils CSPere) NLEVELS;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 3** : Créez un format CS qui associe à \n",
+    "* \"1\" $\\longrightarrow$ Agriculture\n",
+    "* \"2\" $\\longrightarrow$ Artisan\n",
+    "* \"3\" $\\longrightarrow$ Cadre et PIS\n",
+    "* \"4\" $\\longrightarrow$ Professions intermédiaires\n",
+    "* \"5\" $\\longrightarrow$ Employé\n",
+    "* \"6\" $\\longrightarrow$ Ouvrier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC FORMAT;\n",
+    "    VALUE $CS\n",
+    "    \"CS1\" = \"Agriculture\"\n",
+    "    \"CS2\" = \"Artisan\"\n",
+    "    \"CS3\" = \"Cadre et PIS\"\n",
+    "    \"CS4\" = \"Professions intermédiaires\"\n",
+    "    \"CS5\" = \"Employé\"\n",
+    "    \"CS6\" = \"Ouvrier\"\n",
+    ";\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 4** : Affichez le tableau de contingence des variables CSFils (en ligne) et CSPere (en colonne). On appliquera ces deux variables le format CS."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Bien indiquer aux étudiants d'utiliser la pondération.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC FREQ DATA = source.fqp;\n",
+    "TABLE CSFils * CSPere / NOPERCENT NOCOL NOROW FORMAT=10.;\n",
+    "FORMAT CSFils $CS.\n",
+    "    CSPere $CS.;\n",
+    "WEIGHT POIDS;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 5** : Affichez le tableau des fréquences conditionnelles par ligne (aussi appelé tableau des profils-lignes). Les sociologues appellent cette table la table des recrutements. Pourquoi ? Comment interpréter le 88.42% à l'intersection des modalités Agriculture des deux variables ?\n",
+    "\n",
+    "Dans une situation de fluidité sociale, comment serait la table des recrutements ? Quid dans le cas d'une absence totale de mobilité sociale ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC FREQ DATA = source.fqp;\n",
+    "TABLE CSFils * CSPere / NOPERCENT NOCOL NOFREQ FORMAT=10.;\n",
+    "FORMAT CSFils $CS.\n",
+    "    CSPere $CS.;\n",
+    "WEIGHT POIDS;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 6** : Calculez la statistique du Khi-Deux des variables CS1 et CS2. \n",
+    "\n",
+    "Imaginons qu'on s'intéresse au lien entre les variables CS1 et CS2 directement sur les personnes interrogés sans prendre en compte la pondération (soit 6 947 individus). La pondération étant uniforme (même poids pour chaque individu), est-ce que les distributions (au sens des fréquences) de chacunes des variables changent ? Calculez la statistique du Khi-Deux des variables CS1 et CS1 sur les 6 947 individus interrogés. Que remarquez-vous ? Donnez un \"inconvénient\" de cette statistique."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Réponse** : La distribution en terme de fréquence va rester la même. Pour autant la statistique du Khi-Deux sera plus faible alors que le lien entre les variables est le même. À structure donnée, la statistique du Khi-Deux est fonction croissante des effectifs. On pourra insister sur le choix des unités dans un tableau de contingence. Les étudiants n'ont pas encore vu le cours de test d'hypothèse : on ne pourra parler du lien entre puissance du tests d'hypothèses et effectifs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC FREQ DATA = source.fqp;\n",
+    "TABLE CSFils * CSPere / CHISQ;\n",
+    "FORMAT CSFils $CS.\n",
+    "    CSPere $CS.;\n",
+    "WEIGHT POIDS;\n",
+    "RUN;\n",
+    "\n",
+    "PROC FREQ DATA = source.fqp;\n",
+    "TABLE CSFils * CSPere / CHISQ;\n",
+    "FORMAT CSFils $CS.\n",
+    "    CSPere $CS.;\n",
+    "RUN;\n"
    ]
   }
  ],
