--- a/Statistique descriptive/TP 3/TP3.ipynb
+++ b/Statistique descriptive/TP 3/TP3.ipynb
@@ -13,7 +13,16 @@
    "source": [
     "Objectifs de la séance : \n",
     "* blabbla\n",
-    "* blablabla"
+    "* blablabla\n",
+    "\n",
+    "TO DO : bien faire une présentation de la base"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analyse univariée du nombre d'équipements"
    ]
   },
   {
@@ -73,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Réponse** : L'idée est de faire utiliser le format *Zn.*"
+    "**Réponse** : L'idée est de faire utiliser le format *Zn.* Je l'avais évoqué en cours de SAS début septembre."
    ]
   },
   {
@@ -116,7 +125,94 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question** "
+    "**Question** : Calculez le nombre total d'équipements par commune et stockez les résultats dans une table *nb_eq_com* dans la bibliothèque *resultat*. On n'affichera pas les résultats.\n",
+    "La table *nb_eq_com* ne contiendra que deux variables : ComInsee (numéro de la commune) et nb_equip_tot (nombre total d'équipements)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC MEANS DATA = source.equipement SUM NOPRINT;\n",
+    "VAR EFFECTIF;\n",
+    "BY COMINSEE;\n",
+    "OUTPUT OUT = resultat.nb_eq_com(keep=COMINSEE nb_equip_tot) SUM = nb_equip_tot;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question** : À l'aide d'une étape DATA, ajoutez le libellé \"Code géographique officiel (COG)\" à la variable *COMINSEE* et le libellé \"Nombre d'équipements\" à la variable *nb_equip_tot*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA resultat.nb_eq_com;\n",
+    "SET resultat.nb_eq_com;\n",
+    "LABEL COMINSEE = \"Code géographique officiel (COG)\"\n",
+    "nb_equip_tot = \"Nombre d'équipements\";\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question** : Calculez le nombre d'équipements par établissement. On stockera les résultats dans la table *nb_eq_dep* dans la bibliothèque *resultat*.\n",
+    "\n",
+    "Remarque : Le département correspond aux deux premières positions du code géographique officiel. On pourra ajouter une variable *dep* à la table *nb_eq_com* en utilisant les fonctions PUT et SUBSTR."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note pour les chargés de TP** : Cette question est intéressante dans la mesure où elle rappelle que si les élèves utilisent la fonction SUBSTR directement sur la variable COMINSEE alors on n'obtiendra pas le résultat voulu car la variable est numérique. Il faut donc la transformer en caractère en utilisant la fonction PUT et le format Z5. (pour bien afficher le cog sur 5 positions) puis appliquer la fonction SUBSTR en ne gardant que les deux premières positions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA resultat.nb_eq_com;\n",
+    "SET resultat.nb_eq_com;\n",
+    "cominsee_carac = PUT(COMINSEE, Z5.);\n",
+    "DEP = SUBSTR(cominsee_carac, 1,2);\n",
+    "DROP cominsee_carac;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proc contents data = resultat.nb_eq_com;\n",
+    "run;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC MEANS DATA = resultat.nb_eq_com NOPRINT;\n",
+    "VAR nb_equip_tot;\n",
+    "BY DEP;\n",
+    "OUTPUT OUT = resultat.nb_eq_com(keep=DEP nb_equip_tot_dep) SUM = nb_equip_tot_dep;\n",
+    "RUN;"
    ]
   }
  ],
