Ajout de l'analyse des populations

--- a/Statistique descriptive/TP 3/TP3.ipynb
+++ b/Statistique descriptive/TP 3/TP3.ipynb
@@ -15,7 +15,7 @@
     "* blabbla\n",
     "* blablabla\n",
     "\n",
-    "TO DO : bien faire une présentation de la base"
+    "TO DO : bien faire une présentation de la base et des variables des tables equipement, libelle et population"
    ]
   },
   {
@@ -168,7 +168,7 @@
    "source": [
     "**Question** : Calculez le nombre d'équipements par établissement. On stockera les résultats dans la table *nb_eq_dep* dans la bibliothèque *resultat*.\n",
     "\n",
-    "Remarque : Le département correspond aux deux premières positions du code géographique officiel. On pourra ajouter une variable *dep* à la table *nb_eq_com* en utilisant les fonctions PUT et SUBSTR."
+    "Remarque : Le département correspond aux deux premières positions du code géographique officiel (donc sur cinq positions). On pourra ajouter une variable *dep* à la table *nb_eq_com* en utilisant les fonctions PUT et SUBSTR."
    ]
   },
   {
@@ -211,8 +211,155 @@
     "PROC MEANS DATA = resultat.nb_eq_com NOPRINT;\n",
     "VAR nb_equip_tot;\n",
     "BY DEP;\n",
-    "OUTPUT OUT = resultat.nb_eq_com(keep=DEP nb_equip_tot_dep) SUM = nb_equip_tot_dep;\n",
+    "OUTPUT OUT = resultat.nb_eq_dep(keep=DEP nb_equip_tot_dep) SUM = nb_equip_tot_dep;\n",
     "RUN;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proc print data = resultat.nb_eq_dep;\n",
+    "run;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analyse de la population par département"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question** : Affichez des informations générales sur la table *population*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC CONTENTS data = source.population;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question** : Ajoutez une variable de type texte COMINSEE qui contiendra le code officiel géographique de chaque commune. Cette nouvelle table sera enregistré dans la bibliothèque *resultat* et se nommera *population*. \n",
+    "\n",
+    "Le code officiel géographique est la concaténation du code du département et du code de la commune."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA resultat.population;\n",
+    "SET source.population;\n",
+    "LENGTH COMINSEE $5;\n",
+    "COMINSEE = CATS(code_dep,code_com);\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC PRINT DATA = resultat.population(obs = 20);\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question** : Créez la table *pop_equip_com* dans la bibliothèque *resultat* qui contiendra pour chaque observation (ici les communes) : \n",
+    "* une variable ComInsee qui correspondra au code géographique officiel de la commune,\n",
+    "* une variable nb_equip_tot qui correspondra au nombre total d'équipements de la commune,\n",
+    "* une variable pop_tot qui correspondra au nombre d'habitants de la commune.\n",
+    "\n",
+    "On ne gardera que les communes dont on connaît le nombre d'équipements. On se servira de la table *population* créée à la question précédente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note pour les chargés de TP** : L'idée est qu'ils fassent un MERGE entre la table population et la table nb_eq_com. Le problème est que dans la table nb_eq_com la variable COMINSEE est numérique alors qu'elle est caractère dans la table population. Ils devront utiliser les fonctions PUT et INPUT avant !\n",
+    "\n",
+    "Bien faire attention à définir la taille des variables.\n",
+    "\n",
+    "Dans le cours j'ai parlé de l'opérateur !! pour concaténer deux chaînes de caractères. Là, il faut faire une concaténation sans espace donc utiliser la fonction CATS ... Laissez les faire une petite recherche sur Internet."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA nb_eq_com_tempo;\n",
+    "SET resultat.nb_eq_com;\n",
+    "LENGTH COMINSEE2 $5;\n",
+    "COMINSEE2 = PUT(COMINSEE, Z5.);\n",
+    "DROP COMINSEE;\n",
+    "RENAME COMINSEE2 = COMINSEE;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC SORT DATA = nb_eq_com_tempo;\n",
+    "BY COMINSEE;\n",
+    "RUN;\n",
+    "\n",
+    "PROC SORT DATA = resultat.population;\n",
+    "BY COMINSEE;\n",
+    "RUN;\n",
+    "\n",
+    "DATA resultat.pop_equi_com;\n",
+    "MERGE nb_eq_com_tempo(in = eq) resultat.population(in = pop);\n",
+    "IF eq then OUTPUT;\n",
+    "KEEP COMINSEE NB_EQUIP_TOT POP_TOT;\n",
+    "BY COMINSEE;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question** : De quels types (quantitatives ou qualitatives) sont les variables NB_EQUIP_TOT et POP_TOT ? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question** : À l'aide d'un graphique, mettez en lumière le lien entre ces deux variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note pour les chargés de TP** : "
    ]
   }
  ],
